# YoroMCU-OTA

./: README.md
Example/GD32F305-485/1_BOOT/: CMakeLists.txt  main.c
Example/GD32F305-485/1_BOOT/1_App/Include/: Includes.h  LoadApp.h  UpdataApp.h
Example/GD32F305-485/1_BOOT/1_App/Source/: LoadApp.c  UpdataApp.c
Example/GD32F305-485/1_BOOT/4_Driver/Include/: DFlowUser.h  SysInit.h  SysTick.h  UsartStdio.h
Example/GD32F305-485/1_BOOT/4_Driver/Source/: DFlowUser.c  SysInit.c  SysTick.c  UsartStdio.c
Example/GD32F305-485/1_BOOT/5_PhysicalChip/Cpu/GNU/: GD32F310F8.ld
Example/GD32F305-485/1_BOOT/5_PhysicalChip/Cpu/Include/: PlatformReturn.h
Example/GD32F305-485/1_BOOT/5_PhysicalChip/Cpu/Source/: gd32f30x_it.c
Example/GD32F305-485/1_BOOT/Dataflow/common/: CMakeLists.txt
Example/GD32F305-485/1_BOOT/YoroMCU-OTA/ReturnCodesC/: README_EN.md
Example/GD32F305-485/1_BOOT/YoroMCU-OTA/inc/: YoroOTA_Event.h
Example/GD32F305-485/1_BOOT/YoroMCU-OTA/src/: YoroOTA.c  YoroOTA_Event.c
Example/GD32F305-485/2_APP/: CMakeLists.txt  main.c
Example/GD32F305-485/2_APP/1_App/Include/: Includes.h
Example/GD32F305-485/2_APP/4_Driver/Include/: DFlowUser.h  UsartStdio.h
Example/GD32F305-485/2_APP/4_Driver/Source/: DFlowUser.c  SysInit.c  UsartStdio.c
Example/GD32F305-485/2_APP/5_PhysicalChip/Cpu/Include/: PlatformReturn.h
Example/GD32F305-485/2_APP/5_PhysicalChip/Cpu/Source/: gd32f30x_it.c  gd32f3x0_it.c
Example/GD32F305-485/2_APP/5_PhysicalChip/GD32F30x/CMSIS/GD/GD32F30x/Include/: gd32f30x.h
Example/GD32F305-485/2_APP/5_PhysicalChip/GD32F30x/CMSIS/GD/GD32F30x/Source/: system_gd32f30x.c
Example/GD32F305-485/2_APP/5_PhysicalChip/GD32F30x/CMSIS/GD/GD32F30x/Source/ARM/: startup_gd32f30x_cl.s  startup_gd32f30x_hd.s
Example/GD32F305-485/2_APP/5_PhysicalChip/GD32F30x/CMSIS/GD/GD32F30x/Source/IAR/: startup_gd32f30x_cl.s
Example/GD32F305-485/2_APP/5_PhysicalChip/GD32F30x/GD32F30x_standard_peripheral/Include/: gd32f30x_bkp.h  gd32f30x_crc.h  gd32f30x_dma.h  gd32f30x_enet.h  gd32f30x_exmc.h  gd32f30x_misc.h  gd32f30x_rcu.h  gd32f30x_sdio.h  gd32f30x_wwdgt.h
Example/GD32F305-485/2_APP/5_PhysicalChip/GD32F30x/GD32F30x_standard_peripheral/Source/: gd32f30x_crc.c  gd32f30x_dac.c  gd32f30x_dbg.c  gd32f30x_dma.c  gd32f30x_wwdgt.c
Example/GD32F305-485/2_APP/7_CMAKE/toolCmake/: cmake_install.cmake  extra-compile-flags.cmake  post-build-tasks.cmake
Example/GD32F305-485/2_APP/7_CMAKE/toolCmake/cmake_func/: functions.cmake
Example/GD32F305-485/2_APP/Dataflow/: README.md
Example/GD32F305-485/2_APP/Dataflow/common/include/: DFlow.h  DFlow_utility.h
Example/GD32F305-485/2_APP/Dataflow/common/source/: DFlow_Getc.c  DFlow_Init.c  DFlow_Ticks.c  DFlow_Write.c
Example/GD32F305-485/3_TEST_HEX_BIN/: 485_APP_LED1s.elf  485_APP_LED1s.hex  485_APP_LED500ms.elf  485_APP_LED500ms.hex  485_BOOT.elf  485_BOOT.hex
Example/GD32F305-CAN/: README.md
Example/GD32F305-CAN/1_BOOT/: CMakeLists.txt  main.c
Example/GD32F305-CAN/1_BOOT/1_App/Include/: Includes.h  LoadApp.h  UpdataApp.h
Example/GD32F305-CAN/1_BOOT/1_App/Source/: LoadApp.c  UpdataApp.c
Example/GD32F305-CAN/1_BOOT/4_Driver/Include/: CANStdio.h
Example/GD32F305-CAN/1_BOOT/4_Driver/Source/: CANStdio.c  SysInit.c
Example/GD32F305-CAN/1_BOOT/7_CMAKE/: gcc-arm-none-eabi.cmake
Example/GD32F305-CAN/1_BOOT/7_CMAKE/toolCmake/: CMakeLists.txt  extra-compile-flags.cmake
Example/GD32F305-CAN/1_BOOT/YoroMCU-OTA/: CMakeLists.txt
Example/GD32F305-CAN/1_BOOT/YoroMCU-OTA/inc/: BootPort.h  YoroOTA.h  YoroOTA_CAN.h  YoroOTA_Def.h  YoroOTA_Event.h  YoroOTA_Uart.h
Example/GD32F305-CAN/1_BOOT/YoroMCU-OTA/src/: CANUpperPackParser.c  UartBoot.c
Example/GD32F305-CAN/2_APP/: CMakeLists.txt  main.c
Example/GD32F305-CAN/2_APP/1_App/Include/: Includes.h
Example/GD32F305-CAN/2_APP/4_Driver/Include/: SysInit.h
Example/GD32F305-CAN/2_APP/4_Driver/Source/: CANStdio.c  SysInit.c  SysTick.c
Example/GD32F305-CAN/2_APP/7_CMAKE/: gcc-arm-none-eabi.cmake
Port/MCU/: BootConfig.h  BootPort.c  UartBootPort.c
ReturnCodesC/: ReturnCodesC.h
common/: CMakeLists.txt
common/Port/MCU/: BootPort.c
common/ReturnCodesC/: README.md
common/inc/: BootPort.h  YoroOTA_CAN.h  YoroOTA_Def.h  YoroOTA_Uart.h
common/src/: CANBootUpperPackParser.c  CANUpperPackParser.c  UartBootLowerPackForward.c  UartBootUpperPackParser.c  UartBootUpperPackVerification.c  YoroOTA.c
inc/: BootPort.h  YoroOTA.h  YoroOTA_CAN.h  YoroOTA_Def.h  YoroOTA_Event.h  YoroOTA_Uart.h
src/: CANBoot.c  CANBootLowerPackForward.c  UartBoot.c  UartBootLowerPackForward.c  UartBootUpperPackParser.c  UartBootUpperPackVerification.c  YoroOTA.c  YoroOTA_Event.c
(+66 files in other folders)
